// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI: ExtendedText should match snapshot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
      },
      Object {
        "fontFamily": "SourceSans3-Regular",
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  test text
</Text>
`;

exports[`UI: ExtendedText should match snapshot 2`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
      },
      undefined,
      undefined,
    ]
  }
>
  test title text
</Text>
`;

exports[`UI: ExtendedText should match snapshot 3`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
      },
      undefined,
      undefined,
    ]
  }
>
  test secondary text
</Text>
`;
